--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://edu-advantages.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://teal-gradient-nav.preview.emergentagent.com
 WDS_SOCKET_PORT=443
